Map nye førstegangssøknader til ny type FØRSTEGANGSSØKNAD_NY