@@ -1,25 +1,15 @@
 package no.nav.foreldrepenger.historikk.tjenester.tidslinje;
 
 import no.nav.boot.conditionals.ConditionalOnNotProd;
-import no.nav.foreldrepenger.common.innsyn.v2.Arbeidsgiver;
-import no.nav.foreldrepenger.historikk.tjenester.dokumentarkiv.ArkivDokument;
 import no.nav.foreldrepenger.historikk.tjenester.dokumentarkiv.ArkivTjeneste;
 import no.nav.foreldrepenger.historikk.tjenester.felles.HistorikkInnslag;
 import no.nav.foreldrepenger.historikk.tjenester.innsending.Innsending;
-import no.nav.foreldrepenger.historikk.tjenester.innsending.InnsendingInnslag;
 import no.nav.foreldrepenger.historikk.tjenester.inntektsmelding.Inntektsmelding;
-import no.nav.foreldrepenger.historikk.tjenester.inntektsmelding.InntektsmeldingInnslag;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.stream.Stream.concat;
 
@@ -42,99 +32,20 @@ public class TidslinjeTjeneste {
     }
 
     public List<TidslinjeHendelse> tidslinje(String saksnummer) {
-        var docsByJournalpost = arkivTjeneste.hentDokumentoversikt()
-            .stream()
-            .filter(dok -> saksnummer.equals(dok.saksnummer()))
-            .collect(Collectors.groupingBy(ArkivDokument::journalpost));
-        return concat(inntektsmelding.inntektsmeldinger().stream(), innsending.innsendinger().stream())
-            .peek(h -> {
-                if (h.getSaksnr() == null) {
-                    LOG.info("Historikkinnslag {} uten saksnummer", h.getReferanseId());
-                }
-            })
+        var dokumenter = arkivTjeneste.hentDokumentoversikt();
+        var innslag = concat(inntektsmelding.inntektsmeldinger().stream(),
+            innsending.innsendinger().stream())
+            .peek(this::loggManglendeSaksnummer)
             .filter(i -> saksnummer.equals(i.getSaksnr()))
-            .map(hi -> mapTil(hi, docsByJournalpost))
-            .sorted()
-            .collect(Collectors.toList());
+            .toList();
+        return TidslinjeMapper.map(innslag, dokumenter);
     }
 
-    private TidslinjeHendelse mapTil(HistorikkInnslag h,
-                                     Map<String, List<ArkivDokument>> docsByJournalpost) {
-        return switch (h) {
-            case InnsendingInnslag ii -> mapTil(ii, docsByJournalpost);
-            case InntektsmeldingInnslag im -> mapTil(im, docsByJournalpost);
-            default -> throw new IllegalStateException("Ikke implementert for: " + h);
-        };
-    }
-
-    private InntektsmeldingHendelse mapTil(InntektsmeldingInnslag ims,
-                                           Map<String, List<ArkivDokument>> docsByJournalpost) {
-        var dokumenter = docsByJournalpost.get(ims.getJournalpostId());
-        var arbeidsgiverType = ims.getArbeidsgiver().getId().length() != 11
-            ? Arbeidsgiver.ArbeidsgiverType.ORGANISASJON
-            : Arbeidsgiver.ArbeidsgiverType.PRIVAT;
-        var arbeidsgiver = new Arbeidsgiver(ims.getArbeidsgiver().getId(), arbeidsgiverType);
-        return InntektsmeldingHendelse.builder()
-                  .arbeidsgiver(arbeidsgiver)
-                  .dokumenter(dokumenter)
-                  .opprettet(Optional.ofNullable(ims.getInnsendt()).orElse(ims.getOpprettet()))
-                  .tidslinjeHendelseType(TidslinjeHendelseType.INNTEKTSMELDING)
-                  .build();
-    }
-
-    private static LocalDateTime coalesce(LocalDateTime... localDateTimes) {
-        return Arrays.stream(localDateTimes)
-                     .filter(Objects::nonNull)
-                     .findFirst()
-                     .orElse(null);
-    }
-
-    private TidslinjeHendelse mapTil(InnsendingInnslag h,
-                                     Map<String, List<ArkivDokument>> docsByJournalpost) {
-        var dokumenter = docsByJournalpost.get(h.getJournalpostId());
-        if (h.getHendelse().erInitiellSøknad()) {
-            return søknad(h, dokumenter);
-        } else if (h.getHendelse().erEndringssøknad()) {
-            return endringssøknad(h, dokumenter);
-        } else if (h.getHendelse().erEttersending()) {
-            return ettersending(h, dokumenter);
-        } else {
-            throw new IllegalStateException("Nådde feil sted gitt");
+    private void loggManglendeSaksnummer(HistorikkInnslag h) {
+        if (h.getSaksnr() == null) {
+            LOG.info("Historikkinnslag {} uten saksnummer", h.getReferanseId());
         }
     }
 
-    private TidslinjeHendelse endringssøknad(InnsendingInnslag h,
-                                             List<ArkivDokument> dokumenter) {
-        return Søknadshendelse.builder()
-            .tidslinjeHendelseType(TidslinjeHendelseType.ENDRINGSSØKNAD)
-            .aktørType(AktørType.BRUKER)
-            .dokumenter(dokumenter)
-            .opprettet(h.getInnsendt())
-            .build();
-    }
 
-    private TidslinjeHendelse søknad(InnsendingInnslag h,
-                                     List<ArkivDokument> dokumenter) {
-        return Søknadshendelse.builder()
-            .manglendeVedlegg(h.getIkkeOpplastedeVedlegg())
-            .aktørType(AktørType.BRUKER)
-            .dokumenter(dokumenter)
-            .opprettet(h.getInnsendt())
-            .tidslinjeHendelseType(TidslinjeHendelseType.FØRSTEGANGSSØKNAD)
-            .build();
-    }
-
-    private TidslinjeHendelse ettersending(InnsendingInnslag h,
-                                           List<ArkivDokument> dokumenter) {
-        if (dokumenter.isEmpty()) {
-            throw new IllegalStateException("Fant ikke journalpost på ettersending");
-        }
-        return EttersendingHendelse.builder()
-            .dokumenter(List.of())
-            .aktørType(AktørType.BRUKER)
-            .dokumenter(dokumenter)
-            .opprettet(h.getInnsendt())
-            .tidslinjeHendelseType(TidslinjeHendelseType.ETTERSENDING)
-            .build();
-    }
 }
